[package]
name = "timer"
version = "0.1.0"
authors = ["jiangWeixian <jiangweixian1994@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.17"
wasm-bindgen = { version = "0.2.67", features = ["nightly"] }